--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -15,7 +15,7 @@
     <div class="container">
         {% include "base/navbar.html" %}
         <main>
-            <div class="p-4">
+            <div class="px-1 py-4">
                 {% block content %}{% endblock content %}
             </div>
         </main>
