--- a/templates/customer/home.html
+++ b/templates/customer/home.html
@@ -1,9 +1,9 @@
 {% extends "base/base.html" %}
 {% block content %}
 {% if objs %}
-<h1>Danh sách khách hàng:</h1>
+<h1 class='text-center text-primary py-2'>Danh sách khách hàng</h1>
 <br>
-<table class='table table-striped'>
+<table class='table table-striped table-sm'>
     <thead>
         <tr>
           <th scope="col">ID</th>
@@ -31,17 +31,17 @@
             <td>{{obj.NGSINH|date:"d/m/Y"}}</td>
             <td>{{obj.DOANHSO}}</td>
             <td>{{obj.NGDK|date:"d/m/Y"}}</td>
-            {% comment %} <td><a href="{% url 'customer:update' obj.id %}">Cập nhật</a></td> {% endcomment %}
-            {% comment %} <td><a href="{% url 'customer:delete' obj.id %}">Xóa</a></td> {% endcomment %}
+            <td><a href="{% url 'customer:update' obj.id %}">Cập nhật</a></td>
+            <td><a href="{% url 'customer:delete' obj.id %}">Xóa</a></td>
         </tr>
         {% endfor %}
         
       </tbody>
     </table>
-    <button type="button" class="btn btn-info">
-      <a class='text-dark text-decoration-none' href="{% url "customer:add"%}">Thêm mới</a>
-    </button>
 {% else %}
 <p>Chưa có thông tin khách hàng</p>
 {% endif %}
+<button type="button" class="btn btn-info">
+  <a class='text-dark text-decoration-none' href="{% url "customer:add"%}">Thêm mới</a>
+</button>
 {% endblock content %}
