--- a/templates/product/update.html
+++ b/templates/product/update.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 {% block content %}
-<h1>Cập nhật sản phẩm</h1>
+<h1 class='text-center text-primary py-2'>Cập nhật sản phẩm</h1>
 <br>
 <form method="POST">
 	{% csrf_token %}
