--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-primary">
     <div class="container-fluid">
       <a class="navbar-brand" href="">Trang chủ</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,6 +8,8 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href='{% url "customer:home" %}'>Khách hàng</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href='{% url "product:home" %}'>Sản phẩm</a>
           </li>
         </ul>
