--- a/templates/customer/add.html
+++ b/templates/customer/add.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 {% block content %}
-<h1>Thêm khách hàng:</h1>
+<h1 class='text-center text-primary py-2'>Thêm khách hàng</h1>
 <br>
 <form method="POST">
 	{% csrf_token %}
