--- a/templates/product/home.html
+++ b/templates/product/home.html
@@ -1,9 +1,9 @@
 {% extends "base/base.html" %}
 {% block content %}
 {% if objs %}
-<h1>Danh sách Sản phẩm</h1>
+<h1 class='text-center text-primary py-2'>Danh sách Sản phẩm</h1>
 <br>
-<table class='table table-striped'>
+<table class='table table-striped table-sm'>
     <thead>
         <tr>
           <th scope="col">ID</th>
@@ -12,6 +12,8 @@
            <th scope='col'>Đơn vị tính</th>
            <th scope='col'>Nước sản xuất</th>
            <th scope='col'>Giá</th>
+           <th scope='col'>Cập nhật</th>
+           <th scope='col'>Xóa</th>
         </tr>
       </thead>
 
@@ -31,10 +33,10 @@
         
       </tbody>
     </table>
-    <button type="button" class="btn btn-info">
-      <a class='text-dark text-decoration-none' href="{% url "product:add"%}">Thêm mới</a>
-    </button>
 {% else %}
 <p>Chưa có thông tin khách hàng</p>
 {% endif %}
+<button type="button" class="btn btn-info">
+  <a class='text-dark text-decoration-none' href="{% url "product:add"%}">Thêm mới</a>
+</button>
 {% endblock content %}
