--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% comment %} boostrap 5.3 {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% comment %} boostrap 5.3 {% endcomment %}
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
     <title>QLBH</title>
 </head>
 <body>
+    {% include "base/navbar.html" %}
     <div class="container">
-        {% include "base/navbar.html" %}
         <main>
             <div class="px-1 py-4">
                 {% block content %}{% endblock content %}
+            </div>
+            <div class="col-md-6 offset-md-3">
+                {% block form %}{% endblock form %}
             </div>
         </main>
     </div>
