--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,18 +1,19 @@
-<nav class="navbar navbar-expand-lg bg-body-primary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="">Trang chủ</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href='{% url "customer:home" %}'>Khách hàng</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href='{% url "product:home" %}'>Sản phẩm</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<nav class='py-2 bg-body-tertiary'>
+  <ul class="nav nav-underline container">
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" href=''>Trang chủ</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" href='{% url "customer:home" %}'>Khách hàng</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" href='{% url "product:home" %}'>Sản phẩm</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" href='{% url "invoice:home" %}'>Hóa đơn</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" href='{% url "invoiceDetail:home" %}'>CTHD</a>
+    </li>
+  </ul>
+</nav>
