--- a/templates/invoice/add.html
+++ b/templates/invoice/add.html
@@ -1,11 +1,11 @@
 {% extends "base/base.html" %}
 {% block form %}
-<h1 class='text-center text-primary py-2'>Thêm khách hàng</h1>
+<h1 class='text-center text-primary py-2'>Thêm Hóa Đơn</h1>
 <br>
 <form method="POST">
 	{% csrf_token %}
 	{{ form.as_p }}
-  <button type="submit" class="btn btn-secondary">Thêm mới</button>
+  <button type="submit" class="btn btn-secondary">Thêm</button>
 
 </form>
 {% endblock form %}
