err-cryto-fixed

--- a/templates/invoice/add.html
+++ b/templates/invoice/add.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 {% block form %}
-<h1 class='text-center text-primary py-2'>Thêm Hóa Đơn</h1>
+<h1 class='text-center text-primary py-2'>Thêm Hóa đơn</h1>
 <br>
 <form method="POST">
 	{% csrf_token %}
