--- a/templates/invoiceDetail/home.html
+++ b/templates/invoiceDetail/home.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 {% block content %}
 {% if objs %}
-<h1 class='text-center text-primary py-2'>Danh sách khách hàng</h1>
+<h1 class='text-center text-primary py-2'>Danh sách Chi tiết hóa đơn</h1>
 <br>
 <table class='table table-striped table-sm'>
     <thead>
@@ -31,7 +31,7 @@
       </tbody>
     </table>
 {% else %}
-<p>Chưa có thông tin khách hàng</p>
+<p>Chưa có thông tin</p>
 {% endif %}
 <br>
 <button type="button" class="btn btn-info">
