--- a/templates/product/home.html
+++ b/templates/product/home.html
@@ -34,7 +34,7 @@
       </tbody>
     </table>
 {% else %}
-<p>Chưa có thông tin khách hàng</p>
+<p>Chưa có thông tin sản phẩm</p>
 {% endif %}
 <br>
 <button type="button" class="btn btn-info">
