--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -4,6 +4,9 @@
       <a class="nav-link " aria-current="page" href=''>Trang chủ</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link " aria-current="page" href='{% url "employee:home" %}'>Nhân viên</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link " aria-current="page" href='{% url "customer:home" %}'>Khách hàng</a>
     </li>
     <li class="nav-item">
@@ -15,5 +18,6 @@
     <li class="nav-item">
       <a class="nav-link " aria-current="page" href='{% url "invoiceDetail:home" %}'>CTHD</a>
     </li>
+  
   </ul>
 </nav>
