--- a/templates/customer/home.html
+++ b/templates/customer/home.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 {% block content %}
 {% if objs %}
-<h1 class='text-center text-primary py-2'>Danh sách khách hàng</h1>
+<h1 class='text-center text-primary py-2'>Danh sách Khách hàng</h1>
 <br>
 <table class='table table-striped table-sm'>
     <thead>
