--- a/templates/employee/add.html
+++ b/templates/employee/add.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 {% block form %}
-<h1 class='text-center text-primary py-2'>Thêm nhân viên</h1>
+<h1 class='text-center text-primary py-2'>Thêm Nhân viên</h1>
 <br>
 <form method="POST">
 	{% csrf_token %}
