--- a/templates/employee/home.html
+++ b/templates/employee/home.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 {% block content %}
 {% if objs %}
-<h1 class='text-center text-primary py-2'>Danh sách nhân viên</h1>
+<h1 class='text-center text-primary py-2'>Danh sách Nhân viên</h1>
 <br>
 <table class='table table-striped table-sm'>
     <thead>
@@ -26,7 +26,7 @@
             <td>{{obj.HOTEN}}</td>
             <td>{{obj.NGVL|date:"d/m/Y"}}</td>
             <td>{{obj.SODT}}</td>
-            <td>{{obj.CHUCVY}}</td>
+            <td>{{obj.CHUCVU}}</td>
             <td><a href="{% url 'employee:update' obj.id %}">Cập nhật</a></td>
             <td><a href="{% url 'employee:delete' obj.id %}">Xóa</a></td>
         </tr>
@@ -35,7 +35,7 @@
       </tbody>
     </table>
 {% else %}
-<p>Chưa có thông tin khách hàng</p>
+<p>Chưa có thông tin Nhân viên</p>
 {% endif %}
 <br>
 <button type="button" class="btn btn-info">
