--- a/templates/invoiceDetail/add.html
+++ b/templates/invoiceDetail/add.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 {% block form %}
-<h1 class='text-center text-primary py-2'>Thêm khách hàng</h1>
+<h1 class='text-center text-primary py-2'>Thêm Chi tiết hóa đơn</h1>
 <br>
 <form method="POST">
 	{% csrf_token %}
