--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,7 +1,7 @@
 <nav class='py-2 bg-body-tertiary'>
   <ul class="nav nav-underline container">
     <li class="nav-item">
-      <a class="nav-link " aria-current="page" href=''>Trang chủ</a>
+      <a class="nav-link " aria-current="page" href='/'>Trang chủ</a>
     </li>
     <li class="nav-item">
       <a class="nav-link " aria-current="page" href='{% url "employee:home" %}'>Nhân viên</a>
