--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <div class='header'> Chào mừng bạn đã trở lại </div>
+
+    {% extends "base/base.html" %}
+    {% block content %}
     <div class='title'>Báo cáo</div>
 
     <div class='filter'>
@@ -29,38 +24,29 @@
         </div>
     </div>
 
-    <div class="product">
+    <div class="product stat" style="margin-right: 20px">
         <div class="section-title"> Thống kê theo sản phẩm </div>
         <div class="content">
-            <div id="by-product">
-                <table>
-                    <th>
-                        <td> STT </td>
-                        <td> Mã khách hàng</td>
-                        <td> Họ tên khách hàng </td>
-                        <td> Tổng doanh thu </td>
-                    </th>
+            <div>
+                <table id="by-product">
+
+
                 </table>
             </div>
         </div>
     </div>
 
-    <div class="customer">
+    <div class="customer stat">
         <div class="section-title"> Thống kê theo khách hàng </div>
         <div class="content">
-            <div id="by-customer">
-                <table>
-                    <th>
-                        <td> STT </td>
-                        <td> Mã sản phẩm</td>
-                        <td> Tên sản phẩm </td>
-                        <td> Đơn giá </td>
-                        <td> Tổng doanh thu </td>
-                    </th>
+            <div>
+                <table id="by-customer">
+
                 </table>
             </div>
         </div>
     </div>
+
 
     <script>
 
@@ -68,14 +54,17 @@
             var start_date = document.getElementById("start-date").value;
             var end_date = document.getElementById("end-date").value;
 
-            var all_products = JSON.parse('{{ products | safe }}');
-            var all_customers = JSON.parse('{{ customers | safe }}');
-            var all_invoices = JSON.parse('{{ invoices | safe }}');
-            var all_invoicedetails = JSON.parse('{{ invoicedetails | safe }}');
+            //var json_products = "{{ products | safe }}";
+            //var all_products = JSON.parse(json_products.replace(/'/g, '"'));
+            var all_products = {{ products | safe }};
+            var all_customers = {{ customers | safe }};
+
+            var all_invoices = {{ invoices | safe }};
+            var all_invoicedetails = {{ invoicedetails | safe }};
 
             var invoices =[];
             all_invoices.forEach(function(e) {
-                if ((e.NGHD >= start_date || !start_date) && (e.NGHD <= end_date || !end_date)) {
+                if ((e.fields.NGHD >= start_date || !start_date) && (e.fields.NGHD <= end_date || !end_date)) {
                     invoices.push(e)
                 }
             });
@@ -87,13 +76,14 @@
                 var found = 0;
                 var i=0;
                 for (i = 0; i < invoices.length; i++) {
-                    if (invoices[i].SOHD == e.SOHD) {
-                        detail.SOHD = e.SOHD;
-                        detail.MASP = e.MASP;
-                        detail.NGHD = invoices[i].NGHD;
-                        detail.MAKH = invoices[i].MAKH;
-                        detail.MANV = invoices[i].MANV;
-                        detail.SL = e.SL;
+                    if (invoices[i].pk == e.fields.SOHD) {
+                        detail.pkHD = e.fields.SOHD;
+                        detail.pkSP = e.fields.MASP;
+                        detail.pkKH = invoices[i].fields.MAKH;
+                        detail.pkNV = invoices[i].fields.MANV;
+                        detail.SOHD = invoices[i].fields.SOHD;
+                        detail.NGHD = invoices[i].fields.NGHD;
+                        detail.SL = e.fields.SL;
                         found = 1;
                         break;
                     }
@@ -101,18 +91,16 @@
 
                 if (!found) return;
 
-                found = 0;
-                for (i=0; i < all_products; i++) {
-                    if (all_products[i].MASP == e.MASP) {
-                        detail.TENSP = all_products[i].TENSP;
-                        detail.DVT = all_products[i].DVT;
-                        detail.GIA = all_products[i].GIA;
+                var found = 0;
+                for (i=0; i < all_products.length; i++) {
+                    if (all_products[i].pk == e.fields.MASP) {
 
-                        if (!isset(all_products[i]).total) {
-                            all_products[i].total = 0;
+                        if (!(all_products[i].fields.total)) {
+                            all_products[i].fields.total = 0;
                         }
-                        all_products[i].total += detail.GIA * detail.SL;
-                        total += detail.GIA * detail.SL;
+                        detail.total = all_products[i].fields.GIA * detail.SL
+                        all_products[i].fields.total += detail.total;
+                        total += detail.total;
 
                         found = 1;
                         break;
@@ -120,16 +108,14 @@
                 }
 
                 if (!found) return;
-                detail.MAKH = 0;
 
-                for (i=0; i < all_customers; i++) {
-                    if (all_customers[i].MAKH == e.MAKH) {
-                        detail.HOTENKH = all_customers[i].HOTEN;
+                for (i=0; i < all_customers.length; i++) {
+                    if (all_customers[i].pk == detail.pkKH) {
 
-                        if (!isset(all_customers[i]).total) {
-                            all_customers[i].total = 0;
+                        if (!(all_customers[i].fields.total)) {
+                            all_customers[i].fields.total = 0;
                         }
-                        all_customers[i].total += detail.GIA * detail.SL;
+                        all_customers[i].fields.total += detail.total;
                         break;
                     }
                 }
@@ -141,59 +127,61 @@
             document.getElementById("count-revenue").textContent = total;
 
             all_customers.forEach(function(e) {
-                e.total = 0;
-                for (var i = 0; i < details.length; i++) {
-                    if (details[i].MAKH == e.MAKH) {
-                        e.total += details[i].GIA * details[i].SL
-                    }
-                }
+                if (!e.fields.total) e.fields.total = 0;
             });
 
             all_customers.sort(function(a,b) {
-                return (a.total - b.total)
+                return (b.fields.total - a.fields.total)
             });
 
-            html_customers = '';
+            html_customers = `<tr>
+                        <th> STT </th>
+                        <th> Mã khách hàng</th>
+                        <th> Họ tên khách hàng </th>
+                        <th> Tổng doanh thu </th>
+                    </tr>`;
             for (var i=0; i < Math.min(all_customers.length, 10); i++) {
+                var e = all_customers[i];
                 html_customers += `
                     <tr>
-                        <td>${i+1}</td>
-                        <td>${e.MAKH}</td>
-                        <td>${e.HOTENKH}</td>
-                        <td>${e.total}</td>
+                        <td style="text-align: center">${i+1}</td>
+                        <td style="text-align: center">${e.fields.MAKH}</td>
+                        <td>${e.fields.HOTEN}</td>
+                        <td style="text-align: right">${e.fields.total}</td>
                     </tr>`;
             };
-            document.getElementById("by-customer").append(html_customers);
+            document.getElementById("by-customer").innerHTML = html_customers;
 
 
             all_products.forEach(function(e) {
-                e.total = 0;
-                for (var i = 0; i < details.length; i++) {
-                    if (details[i].MASP == e.MASP) {
-                        e.total += details[i].GIA * details[i].SL;
-                    }
-                }
+                if (!e.fields.total) e.fields.total = 0;
             });
 
             all_products.sort(function(a,b) {
-                return (a.total - b.total)
+                return (b.fields.total - a.fields.total)
             });
 
-            html_products = '';
+            html_products = `<tr>
+                        <th> STT </th>
+                        <th> Mã sản phẩm</th>
+                        <th> Tên sản phẩm </th>
+                        <th> Đơn giá </th>
+                        <th> Tổng doanh thu </th>
+                    </tr>`;
             for (var i=0; i < Math.min(all_products.length, 10); i++) {
+                var e = all_products[i];
                 html_products += `
                     <tr>
-                        <td>${i+1}</td>
-                        <td>${e.MASP}</td>
-                        <td>${e.TENSP}</td>
-                        <td>${e.GIA}</td>
-                        <td>${e.total}</td>
+                        <td style="text-align: center">${i+1}</td>
+                        <td style="text-align: center">${e.fields.MASP}</td>
+                        <td>${e.fields.TENSP}</td>
+                        <td style="text-align: right">${e.fields.GIA}</td>
+                        <td style="text-align: right">${e.fields.total}</td>
                     </tr>`;
             };
-            document.getElementById("by-product").append(html_products);
+            document.getElementById("by-product").innerHTML = html_products;
 
         }
         report();
     </script>
-</body>
-</html>
+    {% endblock content %}
