--- a/templates/customer/home.html
+++ b/templates/customer/home.html
@@ -7,7 +7,7 @@
     <thead>
         <tr>
           <th scope="col">ID</th>
-           <th scope='col'>Mã Khách hàng</th>
+           <th scope='col'>MKH</th>
            <th scope='col'>Họ Tên</th>
            <th scope='col'>Địa chỉ</th>
            <th scope='col'>SĐT</th>
