--- a/templates/customer/update.html
+++ b/templates/customer/update.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
-{% block content %}
+{% block form %}
 <h1 class='text-center text-primary py-2'>Cập nhật Khách hàng</h1>
 <br>
 <form method="POST">
@@ -8,4 +8,4 @@
   <button type="submit" class="btn btn-secondary">Cập nhật</button>
 
 </form>
-{% endblock content %}
+{% endblock form %}
